--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -28,7 +28,7 @@
   .project-devider {
     width: 1rem;
     word-break: break-word;
-    margin: 0 10rem;
+    margin: 0 8rem;
   }
 
   .project-preview {
