--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,7 +4,7 @@
   --font-family: "Sixtyfour", sans-serif;
   --font-size-root: 62.5%; /* (10px) for easier rem calculation*/
   --font-size-reguler: 1.6rem; /* (16px) actual font size */
-  --font-size-title: 9.4vw;
+  --font-size-title: 16.4rem;
   --color-main: #a8a3ff;
   --color-main-bg: #1B1A21;
   --color-secondary-bg: #252238;
